buroak.css
/* ... */
a:link, a:visited {
  text-decoration: none;
}

/*Rent the Brewery*/

.rent {
  display: block;
  width: 100vw;
  margin: auto 0;
  vertical-align: middle;
  text-align: left;
  padding: 10px
}


.gallery {
  display: block;
  width: 100vw;
  margin: auto 0;
  vertical-align: middle;
  text-align: left;
}

.flyer a:link {
  font-family: 'Noto Sans', Helvetica, sans-serif;
  font-style: italic;
  font-size: 20px;
}

.center {
  text-align: center;
  padding: 10px;
  margin: auto 0;
}
#center {
  margin-left: auto;
  width: 100vw;
}

.flyer {
  list-style: none;
  text-decoration: none;
  color: #5C5345;
}

/*.rcorners2 {
  display: block;
  margin: auto 0;
  vertical-align: middle;
} tried to format for mobile*/
#rcorners2 {
  font-family: 'Noto Sans', Helvetica, sans-serif;
    border-radius: 25px;
    border: 4px solid black;
	background: white;
  background-color: #5C5345;
    width: 90%;
    height: auto;
     display: block;
   margin: auto;
   padding: 10px;
}

.rcorners2 {
  width: 80% auto;
  margin: 0 auto;
}

.button {

    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    font-family:'Noto Sans', Helvetica, sans-serif;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.w3-display-container {
  width: 80% auto;
  margin: 0 auto;
}

.mySlides {
  width: 100%;
}

@media all and (min-width:800px) {

  .rcorners2 {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    width: 50% auto;
    margin: 0 auto;
    justify-content: flex-end;
  }

  aside {
  				flex: 1 auto;
          display: flex;
          flex-wrap: wrap;
          flex-direction: row;
          width: 50%;
  		}

  		article {
  		flex: 3 0px;
  	}


  		article {
  				order: 2;
  		}


  		footer {
  				order: 3;
  		}

      article {
        display: flex;
        flex-flow: row;
        flex-wrap: wrap;
      }

    }



/*Brewers*/

.brew {
  display: block;
  width: 90vw;
  margin: 0;
  padding: 0;
  border-style: solid;
  border-width: thin;


}

#brew {
  width: 95%;

}

/* blog */
.h2color {
	color: #0F132E;
}
.blogsubhead {
	color: #0F132E;
}
#smallmargins {
  margin-bottom: 0px;
  margin-top: 8px;
}
#herop {
  margin-top: 10px;
  margin-bottom: 10px;
}

.readmore {
  font-family: 'Playfair Display', 'Times New Roman', serif;
  font-weight:400;
  color: #5C5345;
  margin-top: 0;
}
.readmore  {
  font-family: 'Playfair Display', 'Times New Roman', serif;
  font-weight:400;
  color: #5C5345;
}
.readmore {
  font-family: 'Playfair Display', 'Times New Roman', serif;
  font-weight:400;
  color: #5C5345;
}

.backtoblogs {
  font-family: 'Playfair Display', 'Times New Roman', serif;
  font-weight:400;
  color: #5C5345;
}
.backtoblogs {
  color: #5C5345;
}
.backtoblogs {
  color: #5C5345;
}
.posteddate {
text-indent: 0px;
font-family: 'Playfair Display', 'Times New Roman', serif;
font-weight:400;
color: #5C5345;
margin-top: 0;
margin-bottom: 10px;
}

.blogimages {
  width: 100vw;
  height: auto;
}
.smallblogimage {
  height: auto;
  display: block;
  width: 100vw;
  margin: 0 auto;

}
.smallblogimage2 {
  height: auto;
  display: block;
  width: 100vw;
  margin: 0 auto;
}
.smallblogimage3 {
  height: auto;
  display: block;
  width: 100vw;
  margin-left: -10px;
  margin-bottom: 10px;
}

.heroesh2 {
  text-align: center;
  color: #0F132E;
  margin-top: 5px;
}

.blogh1 {
  margin-bottom: 0;
}

.blogheadline {
  font-family: 'Playfair Display', 'Times New Roman', serif;
  font-weight:900;
  color: #5C5345;
  width: 95%;
  margin-left: 0;
  text-decoration: none;
  margin-bottom: 5px;
}

iframe {
  width: 100vw;
}
.heroname {
  margin-top: 0px;
  margin-left: 10px;
  margin-bottom: 5px;
  padding: 0;
}
.heroheadline  {
  padding-top: 50px;
  margin-bottom: 5px;
  color: #5C5345;
}


/* flexbox styles */
.wrapper {
    display: flex;
    flex-flow: row wrap;
}
article, aside {
  flex: 1 100%;
  padding: 0;
}



/* .headliney {
    font-family: 'Playfair Display', 'Times New Roman', serif;
    font-weight:900;
    color: #5C5345;
    width: 95%;
    margin-left: 10px;
    text-decoration: none;
    list-style-type: none;
}
.headliney a:visted, a:link {
    font-family: 'Playfair Display', 'Times New Roman', serif;
    font-weight:900;
    color: #5C5345;
    width: 95%;
    margin-left: 10px;
    text-decoration: none;
    list-style-type: none;
}
.headliney a:hover, a:active {
    font-family: 'Playfair Display', 'Times New Roman', serif;
    font-weight:900;
    color: #5C5345;
    width: 95%;
    margin-left: 10px;
    text-decoration: none;
    list-style-type: none;
}
*/

aside {
  margin-left: 0;
}

footer {
  margin-left: -10px;
  margin-right: -10px;
  margin-bottom: -10px
}

/*events styles */
#month {
  text-align: center;
}

/* .flexcontainer {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
} */

TABLE {
  background-color: #FFFDDE;
  margin-left: auto;
  margin-right: auto;
}
TD {
  border-bottom: solid 1px #0F132E;
}


#bold {
  font-weight: bold;
  margin-bottom: 0;
  margin-left: 0;
  text-align: left;
}
#calendar {
  margin: 5px;
}
/* ... */

